--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -43,6 +43,8 @@ jobs:
       # note: If you use only_check_changed_files, you do not want cancel-in-progress
       cancel-in-progress: true
     steps:
+    - name: debug
+      run: ls -l
     - name: check-spelling
       id: spelling
       uses: ./actions/check-spelling
